--- a/build.gradle
+++ b/build.gradle
@@ -4,13 +4,13 @@ plugins {
 
 group 'org.example'
 version '1.0-SNAPSHOT'
-
 repositories {
     mavenCentral()
 }
 
 dependencies {
     compile group: 'com.opencsv', name: 'opencsv', version: '4.1'
+    compile 'com.google.code.gson:gson:2.2.+'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
