--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.2.+'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '5.1.49'
 }
 
 test {
